# EdClaw

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  IR_SCHEMA.md  README.md  RUNNING.md  USAGE.md  notebooka2d754da15.ipynb  pyproject.toml  requirements.txt  run.md
.github/workflows/: ci.yml
assets/: ascii-logo.txt
content/ir/series/2026-04-23-intro-linear-algebra-8/: course-plan.json  lecture-01-lecture-1-foundations-of-vector-spaces.md  lecture-02-lecture-2-introduction-to-matrices-and-systems-of-equati.md  lecture-03-lecture-3-linear-transformations-and-basis-vectors.md  lecture-04-lecture-4-introduction-to-eigenvalues-and-eigenvectors.md  lecture-05-lecture-5-diagonalization-and-matrix-powers.md  lecture-06-lecture-6-applications-of-eigen-decomposition.md  lecture-07-lecture-7-concrete-geometric-interpretation.md  (+1 more)
dataset/: manim_sft.jsonl  sft.jsonl
dataset_prep/: README.md  main.py  self_prepare.py  task1.py  task2n3.py
dataset_prep/manim_kb/: __init__.py  builder.py  introspect.py  render.py
dataset_prep/output/: manim_kb.md  sft_comprehension.jsonl  sft_self_reflection.jsonl
docker/: manim.Dockerfile  runner.Dockerfile
docker/modelfiles/: gemma3-tool.Modelfile
docs/: AUTOCOURSE.md  AUTOMANIM.md  DAGESTAN.md  DEVELOPERS.md  EduClaw_Concepts_Explained.md  MANIBENCH_RUNBOOK.md  MANIM_PIPELINE.md  ROADMAP.md  SITE_GENERATION.md  TTS.md
docs/changelog/: 2026-W18.md
media/Tex/: 51c3e06283051f36.tex  7315b2eb7e3b41ef.tex
notebook/: gemma4sft.ipynb
profiles/: cloud.toml  local.toml
scripts/: bootstrap.sh  generate_dataset.py  generate_ir_pipeline.py  generate_manim_dataset.py  pull_models.sh  render_series_with_tts.py  render_series_with_tts.sh  run_full_course_pipeline.py  run_full_course_pipeline.sh
src/educlaw/: __init__.py  cli.py  logging.py
src/educlaw/agent/: __init__.py  deps.py  model.py  root.py  wiring.py
src/educlaw/assets/: __init__.py  ascii-logo.txt
src/educlaw/autocourse/: __init__.py  orchestrator.py  pipeline.py  schema.py
src/educlaw/autolecture/: __init__.py  generator.py  schema.py
src/educlaw/automanim/: .gitignore  STUDIO_SYSTEM.md  __init__.py  adk_runner.py  agents_bundle.py  codegen.py  constants.py  convert2template.py  critic.py  ir_sft_dataset.jsonl  orchestrator.py  package-lock.json  package.json  planner.py  render.py  schema.py  sft_dataset.jsonl  test_prompts.txt
src/educlaw/channels/: __init__.py  cli.py  contract.py  registry.py  telegram.py  webchat.py
src/educlaw/config/: settings.py  strict_local.py
src/educlaw/gateway/: app.py  auth.py  events_serial.py  index.html  main.py  run.py  webhooks.py  ws.py
src/educlaw/ir/: __init__.py  indexer.py  loader.py  schema.py  store.py
src/educlaw/memory/: __init__.py  adk_memory_service.py  dagestan.py  embeddings.py  models.py  vec_store.py
src/educlaw/safety/: __init__.py  audit.py  shield.py
src/educlaw/sandbox/: __init__.py  contract.py  docker_sandbox.py  local_jail.py  null_sandbox.py  policy.py  ssh_sandbox.py
src/educlaw/sitegen/: __init__.py  catalog.py  converter.py  generator.py  registry.py
src/educlaw/train/: __init__.py  automanim.py  cli.py  hf_push.py  paths.py  studio.py
src/educlaw/tts/: __init__.py  contract.py  ir_markdown.py  lecture_ir.py  md_to_ir.py  md_to_script.py  md_to_srt.py  registry.py  script.py
src/educlaw/viz/: __init__.py  manim_exec.py
templates/course_catalog/: index.html.jinja
templates/course_site/: _config.yml.jinja  copier.yml  index.md.jinja
templates/course_site/_data/: people.yml.jinja
templates/course_site/_layouts/: home.html
templates/course_site/_sass/: _layout.scss  _user_vars.scss
tests/: test_cli.py  test_manibench_eval.py  test_manibench_teacher_gen.py  test_train_cli.py
tests/integration/: test_automanim_render.py
tests/unit/: test_artifacts_manim_route.py  test_autocourse_automanim.py  test_autocourse_orchestrator.py  test_autolecture_generator.py  test_automanim_critic.py  test_automanim_orchestrator.py  test_automanim_planner.py  test_automanim_render_local.py  test_gateway_execution.py  test_gateway_static.py  test_imports.py  test_kitten_tts_smoke.py  test_manim_command_prefix.py  test_tts_null_backend.py  test_tts_registry.py  test_ws_autocourse.py  test_ws_gateway_chat.py  test_ws_tts.py
training/automanim/: README.md
training/automanim/automanim_sft/: __init__.py  build_dataset.py  ir_scene_dataset.py  template.py  tool_definitions.py
training/automanim/scripts/: build_ir_sft_jsonl.py  build_sft_jsonl.py  smoke_infer.py  train_gemma4_sft.py
training/automanim/studio/: README.md  automanim-gemma4-e2b-qlora.yaml  export_config.py
training/grpo/: README.md  gemma4_(e2b)_reinforcement_learning_sudoku_game.py  main.py  manibench.py  pyproject.toml  rewards.py  test_rewards.py
training/manibench/: README.md  SUBMIT_HF_JOBS.md
training/manibench/manibench/: __init__.py  constants.py  gl_ce_catalog.py  leakage.py  prompt_seeds.py
training/manibench/scripts/: build_preference_dataset.py  build_sft_core_dataset.py  eval_uv_standalone.py  final_eval_report.py  generate_sft_teacher.py  iterative_sft_loop.py  merge_sft_jsonl.py  orchestrate_stage_b.sh  push_hub.py  refresh_eval_hashes.py  synthetic_expand.py  train_dpo_pass.py  train_grpo_pass.py  train_incremental_sft.py  train_stage_a_sft.py
(+553 files in other folders)
