[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "educlaw"
version = "0.1.0"
description = "EduClaw — local-first educational agent gateway (ADK + Gemma via Ollama)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "EduClaw contributors" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "websockets>=13",
  "pydantic>=2.9",
  "pydantic-settings>=2.5",
  "httpx>=0.28",
  "anyio>=4.6",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.20",
  "networkx>=3.3",
  "docker>=7.1",
  "asyncssh>=2.18",
  "python-frontmatter>=1.1",
  "ruamel.yaml>=0.18",
  "typer>=0.13",
  "rich>=13.9",
  "terminaltexteffects>=0.15.0",
  "structlog>=24.4",
  "cachetools>=5.5",
  "google-adk>=0.1.0",
  "litellm>=1.65.5",
  "google-genai>=1.0.0",
  "ollama>=0.4",
  "dagestan>=0.1.0",
  "copier>=9.1",
  "soundfile",
  "wrapt>=2.1.2",
  "pip>=26.1.2",
  "setuptools>=82.0.1",
  "wheel>=0.47.0",
  "kittentts>=0.8.1",
  "peft>=0.19.1",
  "trl>=0.23.0",
]

[project.optional-dependencies]
sqlite-vec = ["sqlite-vec>=0.1.6"]
training = [
  "transformers>=4.46",
  "peft>=0.13",
  "trl>=0.12",
  "datasets>=3.1",
  "accelerate>=1.1",
]
channels = [
  "python-telegram-bot>=21.6",
  "discord.py>=2.4",
  "matrix-nio>=0.25",
]
cloud = [
  "google-cloud-aiplatform>=1.70",
]
structured = [
  "instructor>=1.7",
  "outlines>=0.1",
]
pi = [
  "pi-agent-core>=0.1.1",
]
automanim = [
  "manim>=0.18.0",
]
# Unsloth SFT locally (CUDA); see training/automanim/README.md — prefer ``uv run`` + PEP 723 scripts.
automanim-training = [
  "unsloth",
  "jinja2>=3.1",
  "wandb>=0.18",
  "pyyaml>=6",
]
tts-kitten = [
  "kittentts @ https://github.com/KittenML/KittenTTS/releases/download/0.8.1/kittentts-0.8.1-py3-none-any.whl",
  "soundfile>=0.12",
  "numpy>=1.26",
]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.8",
  "mypy>=1.13",
  "types-docker>=7.1",
  "types-cachetools>=5.5",
]

[project.scripts]
educlaw = "educlaw.cli:main"

[project.entry-points."educlaw.tts"]
null = "educlaw.tts.backends.null:factory"
kitten = "educlaw.tts.backends.kitten:factory"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"educlaw.assets" = ["*.txt"]
"educlaw.gateway" = ["static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"training/automanim/automanim_sft/template.py" = ["E501"]


[tool.mypy]
python_version = "3.11"
packages = ["educlaw"]
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: integration tests that invoke manim or long I/O"]
