[project]
name = "educlaw-grpo"
version = "0.0.0"
description = "GRPO Manim training (Unsloth Gemma-4)"
requires-python = ">=3.11,<3.13"
dependencies = [
  "unsloth @ git+https://github.com/unslothai/unsloth",
  "unsloth-zoo @ git+https://github.com/unslothai/unsloth-zoo",
  "trl>=0.28.0",
  "transformers==5.5.0",
  "tokenizers>=0.22.0,<=0.23.0",
  "datasets>=3.4.1,<4.4.0",
  "accelerate>=1.1",
  "bitsandbytes",
  "huggingface-hub>=0.34.0",
  "peft>=0.18.0",
  "torch",
]

# unsloth-zoo pins trl<=0.24; Gemma 4 GRPO needs trl>=0.28 (notebook uses pip --no-deps).
[tool.uv]
override-dependencies = [
  "trl>=0.28.0",
]
